[Config] add babel and bower

--- a/package.json
+++ b/package.json
@@ -1,44 +1,44 @@
 {
-  "name": "generator-webapp",
-  "version": "2.1.0",
-  "description": "Scaffold out a front-end web app",
-  "license": "BSD-2-Clause",
-  "repository": "yeoman/generator-webapp",
-  "author": "The Yeoman Team",
-  "main": "app/index.js",
+  "private": true,
   "engines": {
-    "node": ">=4",
-    "npm": ">=1.3"
-  },
-  "scripts": {
-    "test": "mocha --reporter spec --timeout 3000"
-  },
-  "files": [
-    "app"
-  ],
-  "keywords": [
-    "yeoman-generator",
-    "web",
-    "app",
-    "front-end",
-    "h5bp",
-    "modernizr",
-    "jquery",
-    "gulp"
-  ],
-  "dependencies": {
-    "chalk": "^1.0.0",
-    "generator-jasmine": "^0.2.1",
-    "generator-mocha": "^0.3.0",
-    "mkdirp": "^0.5.1",
-    "underscore.string": "^3.1.1",
-    "wiredep": "^2.2.2",
-    "yeoman-assert": "^2.1.1",
-    "yeoman-generator": "^0.22.5",
-    "yosay": "^1.0.0"
+    "node": ">=4"
   },
   "devDependencies": {
-    "mocha": "*",
-    "yeoman-test": "^1.1.0"
+    "babel-core": "^6.4.0",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.5.2",
+    "browser-sync": "^2.2.1",
+    "del": "^1.1.1",
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.0.1",
+    "gulp-babel": "^6.1.1",
+    "gulp-cache": "^0.4.2",
+    "gulp-cssnano": "^2.0.0",
+    "gulp-eslint": "^2.0.0",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-sass": "^2.0.0",
+    "gulp-size": "^1.2.1",
+    "gulp-sourcemaps": "^1.5.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^3.0.0",
+    "main-bower-files": "^2.5.0",
+    "wiredep": "^2.2.2"
+  },
+  "eslintConfig": {
+    "env": {
+      "es6": true,
+      "node": true,
+      "browser": true
+    },
+    "rules": {
+      "quotes": [
+        2,
+        "single"
+      ]
+    }
   }
 }
