--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
     "main-bower-files": "^2.5.0",
-    "wiredep": "^2.2.2"
+    "wiredep": "^2.2.2",
+    "twig": "^0.9.5"
   },
   "eslintConfig": {
     "env": {
@@ -40,5 +41,8 @@
         "single"
       ]
     }
+  },
+  "dependencies": {
+    "twig": "^0.9.5"
   }
 }
