--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
   "name": "generator-webapp",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5",
-    "modernizr": "~2.8.1"
+    "modernizr": "~2.8.1",
+    "bootstrap": "^4.0"
   },
   "overrides": {
     "bootstrap-sass": {
