--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@ dist
 .tmp
 bower_components
 test/bower_components
+.idea/workspace.xml
+.idea/vcs.xml
+.idea/toro-frontend.iml
+.idea/modules.xml
+.idea/copyright/profiles_settings.xml
