--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,8 @@ test/bower_components
 .idea/modules.xml
 .idea/copyright/profiles_settings.xml
 .idea/workspace.xml
+.idea/*
+app/mobile/.idea/copyright/profiles_settings.xml
+app/mobile/.idea/workspace.xml
+app/mobile/.idea/modules.xml
+app/mobile/.idea/*
