--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,9 @@
   "private": true,
   "dependencies": {
     "modernizr": "~2.8.1",
-    "bootstrap": "^4.0"
+    "bootstrap": "^4.0",
+    "font-awesome": "^4.6.3",
+    "tether": "^1.3.2"
   },
   "overrides": {
     "bootstrap-sass": {
